--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "date-fns": "~1.30.1",
     "envalid": "~4.2.0",
     "express": "~4.16.4",
+    "final-form": "^4.20.2",
     "graphql": "~14.1.1",
     "graphql-request": "^2.0.0",
     "graphql-tag": "~2.10.1",
@@ -67,10 +68,12 @@
     "next": "9.4.1",
     "passport": "~0.4.0",
     "passport-oauth2": "~1.4.0",
+    "payment": "^2.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-container-query": "~0.11.0",
     "react-dom": "^16.13.0",
+    "react-final-form": "^6.5.3",
     "react-helmet": "~5.2.0",
     "react-stripe-elements": "~2.0.3",
     "react-tracking": "~5.6.0",
