--- a/package.json
+++ b/package.json
@@ -74,10 +74,12 @@
     "react-container-query": "~0.11.0",
     "react-dom": "^16.13.0",
     "react-final-form": "^6.5.3",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "~5.2.0",
     "react-stripe-elements": "~2.0.3",
     "react-tracking": "~5.6.0",
     "reacto-form": "~1.4.0",
+    "recompose": "^0.30.0",
     "styled-components": "^5.0.1",
     "subscriptions-transport-ws": "~0.9.15",
     "swr": "^0.1.18"
