--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-components": "^3.1.3",
     "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.46",
     "@material-ui/styles": "^4.9.6",
     "@reactioncommerce/components": "~0.67.2",
