--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,10 @@ networks:
 
 services:
   reaction-admin:
-    image: reactioncommerce/admin:3.0.0-beta.11
+    # image: reactioncommerce/admin:3.0.0-beta.11
+    image: luiscelano/reaction-admin-lulis:1.0.1
+    # build:
+    #   context: .
     env_file:
       - ./.env
     networks:
