--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ networks:
 services:
   reaction-admin:
     # image: reactioncommerce/admin:3.0.0-beta.11
+    # image: reactioncommerce/admin:3.0.0-beta.13
     image: luiscelano/reaction-admin-lulis:1.0.1
     # build:
     #   context: .
