updating getStaticProps of checkout and cart

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ networks:
 services:
   web:
     image: luiscelano/storefront:1.0.3
+    #image: reactioncommerce/example-storefront:4.0.2
     # build: 
     #   context: .
     env_file:
