--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
-CANONICAL_URL=http://localhost:4000
+CANONICAL_URL=https://storefront.qbit01.com
 ENABLE_SPA_ROUTING=true
 BUILD_GRAPHQL_URL=http://localhost:3000/graphql
-EXTERNAL_GRAPHQL_URL=http://localhost:3000/graphql
+EXTERNAL_GRAPHQL_URL=https://api.qbit01.com/graphql
 INTERNAL_GRAPHQL_URL=http://api.reaction.localhost:3000/graphql
 OAUTH2_ADMIN_PORT=4445
 OAUTH2_ADMIN_URL=http://hydra.reaction.localhost:4445
-OAUTH2_AUTH_URL=http://localhost:4444/oauth2/auth
+OAUTH2_AUTH_URL=https://hydra.qbit01.com/oauth2/auth
 OAUTH2_CLIENT_ID=example-storefront
 OAUTH2_CLIENT_SECRET=CHANGEME
-OAUTH2_PUBLIC_LOGOUT_URL=http://localhost:4444/oauth2/sessions/logout
+OAUTH2_PUBLIC_LOGOUT_URL=https://hydra.qbit01.com/oauth2/sessions/logout
 OAUTH2_HOST=hydra.reaction.localhost
-OAUTH2_IDP_PUBLIC_CHANGE_PASSWORD_URL=http://localhost:4100/account/change-password?email=EMAIL&from=FROM
-OAUTH2_IDP_HOST_URL=http://identity.reaction.localhost:4100
-OAUTH2_TOKEN_URL=http://hydra.reaction.localhost:4444/oauth2/token
+OAUTH2_IDP_PUBLIC_CHANGE_PASSWORD_URL=https://identity.qbit01.com/account/change-password?email=EMAIL&from=FROM
+OAUTH2_IDP_HOST_URL=https://identity.qbit01.com
+OAUTH2_TOKEN_URL=https://hydra.qbit01.com/oauth2/token
 PORT=4000
 SEGMENT_ANALYTICS_SKIP_MINIMIZE=true
 SEGMENT_ANALYTICS_WRITE_KEY=ENTER_KEY_HERE
 SESSION_MAX_AGE_MS=2592000000
 SESSION_SECRET=CHANGEME
 STRIPE_PUBLIC_API_KEY=ENTER_STRIPE_PUBLIC_KEY_HERE
+OAUTH2_REDIRECT_URL=https://storefront.qbit01.com/callback
