--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-final-form": "^6.5.3",
     "react-google-maps": "^9.4.5",
     "react-helmet": "~5.2.0",
+    "react-horizontal-scrolling-menu": "^0.7.10",
     "react-stripe-elements": "~2.0.3",
     "react-tracking": "~5.6.0",
     "reacto-form": "~1.4.0",
