--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ PUBLIC_FILES_BASE_URL=http://localhost:3000
 PUBLIC_I18N_BASE_URL=http://localhost:3000
 PUBLIC_STOREFRONT_HOME_URL=http://localhost:4000
 ROOT_URL=http://localhost:4080
+PUBLIC_INVOICE_URL=http://localhost
