--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 CANONICAL_URL=http://localhost:4000
+STOREFRONT_URL=http://localhost:3000
 ENABLE_SPA_ROUTING=true
 BUILD_GRAPHQL_URL=http://localhost:3000/graphql
 EXTERNAL_GRAPHQL_URL=http://localhost:3000/graphql
