--- a/.env.prod
+++ b/.env.prod
@@ -19,4 +19,4 @@ SEGMENT_ANALYTICS_WRITE_KEY=ENTER_KEY_HERE
 SESSION_MAX_AGE_MS=2592000000
 SESSION_SECRET=CHANGEME
 STRIPE_PUBLIC_API_KEY=ENTER_STRIPE_PUBLIC_KEY_HERE
-
+OAUTH2_REDIRECT_URL=http://localhost:4000/callback
