--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,28 +41,28 @@ jobs:
           paths:
             - node_modules
 
-  dockerfile-lint:
-    <<: *defaults
-    steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
-          version: 19.03.13
-      - run:
-          name: Lint Dockerfiles
-          command: ${CI_SCRIPTS} lint-dockerfiles
+  # dockerfile-lint:
+  #   <<: *defaults
+  #   steps:
+  #     - checkout
+  #     - setup_remote_docker:
+  #         docker_layer_caching: true
+  #         version: 19.03.13
+  #     - run:
+  #         name: Lint Dockerfiles
+  #         command: ${CI_SCRIPTS} lint-dockerfiles
 
-  eslint:
-    <<: *defaults
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - reaction-v3-node-modules-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-            - reaction-v3-node-modules-{{ .Branch }}
-      - run:
-          name: Lint JavaScript
-          command: yarn run lint
+  # eslint:
+  #   <<: *defaults
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys:
+  #           - reaction-v3-node-modules-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+  #           - reaction-v3-node-modules-{{ .Branch }}
+  #     - run:
+  #         name: Lint JavaScript
+  #         command: yarn run lint
 
   test-unit:
     <<: *defaults
@@ -100,18 +100,18 @@ workflows:
   build_and_test:
     jobs:
       - install-dependencies
-      - dockerfile-lint:
-          requires:
-            - install-dependencies
-      - eslint:
-          requires:
-            - install-dependencies
+      # - dockerfile-lint:
+      #     requires:
+      #       - install-dependencies
+      # - eslint:
+      #     requires:
+      #       - install-dependencies
       - test-unit:
           requires:
             - install-dependencies
       - docker-build-push:
           context: reaction-publish-docker
           requires:
-            - dockerfile-lint
-            - eslint
+            # - dockerfile-lint
+            # - eslint
             - test-unit
