branch build execution restriction added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,9 @@ jobs:
 
   docker-build-push:
     <<: *defaults
+    branches:
+      only:
+        - master
     steps:
       - checkout
       - setup_remote_docker:
